--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
                 </div>
                 <!-- NAVIGATION  -->
                 <nav class="nav-wide">
-                    <a href="index.html"><img class="logo" src="assets/img/logo.svg" alt="logo"></a>
+                    <a href="index.html"><img class="logo" src="assets/images/logo.svg" alt="logo"></a>
                     <a href="index.html" class="index_html content-link menu-link">
                         <span class="im-1">Home</span>
                     </a>
@@ -73,7 +73,7 @@
                                    <div class="row">  
                                     <div class="col-md-5">
                                         <div>
-                                            <img class="img-fluid el" src="assets/img/about/profile.jpg" alt="img">
+                                            <img class="img-fluid el" src="assets/images/about/profile.jpg" alt="img">
                                         </div>
                                         <div class="personal-info el">
                                             <h5 class="tit-5">Personal Information</h5>
@@ -155,7 +155,7 @@
                     <div class="col-md-12 width-footer"> 
                         <footer class="footer footer-bg-color text-center">
                             <div class="footer-content">
-                                <a href="index.html"><img class="footer-logo" src="assets/img/logo.svg" alt="logo"></a>
+                                <a href="index.html"><img class="footer-logo" src="assets/images/logo.svg" alt="logo"></a>
                                 <div class="footer-nav">
                                     <a href="index.html" class="content-link">
                                         <span>Home</span>
@@ -190,17 +190,17 @@
 </div><!-- /.container-fluid -->
 
 <!-- JS -->
-<script src="assets/js/jquery-3.2.1.min.js"></script>
-<script src="assets/js/anime.min.js"></script>
-<script src="assets/js/imagesloaded.pkgd.min.js"></script>
-<script src="assets/js/nprogress.js"></script>
-<script src="assets/js/bootstrap.bundle.min.js"></script>
-<script src="assets/js/swiper.min.js"></script>
-<script src="assets/js/jquery.shuffle.min.js"></script>
-<script src="assets/js/jquery.magnific-popup.min.js"></script>
-<script src="assets/js/validator.min.js"></script>
-<script src="assets/js/form-scripts.js"></script>
-<script src="assets/js/pjax.min.js"></script>
-<script src="assets/js/main.js"></script>
+<script src="assets/javascript/jquery-3.2.1.min.js"></script>
+<script src="assets/javascript/anime.min.js"></script>
+<script src="assets/javascript/imagesloaded.pkgd.min.js"></script>
+<script src="assets/javascript/nprogress.js"></script>
+<script src="assets/javascript/bootstrap.bundle.min.js"></script>
+<script src="assets/javascript/swiper.min.js"></script>
+<script src="assets/javascript/jquery.shuffle.min.js"></script>
+<script src="assets/javascript/jquery.magnific-popup.min.js"></script>
+<script src="assets/javascript/validator.min.js"></script>
+<script src="assets/javascript/form-scripts.js"></script>
+<script src="assets/javascript/pjax.min.js"></script>
+<script src="assets/javascript/main.js"></script>
 </body>
 </html>
