--- a/index.html
+++ b/index.html
@@ -254,17 +254,17 @@
 </div><!-- /.footer-pos -->
 
 <!-- JS -->
-<script src="assets/js/jquery-3.2.1.min.js"></script>
-<script src="assets/js/anime.min.js"></script>
-<script src="assets/js/imagesloaded.pkgd.min.js"></script>
-<script src="assets/js/nprogress.js"></script>
-<script src="assets/js/bootstrap.bundle.min.js"></script>
-<script src="assets/js/swiper.min.js"></script>
-<script src="assets/js/jquery.shuffle.min.js"></script>
-<script src="assets/js/jquery.magnific-popup.min.js"></script>
-<script src="assets/js/validator.min.js"></script>
-<script src="assets/js/form-scripts.js"></script>
-<script src="assets/js/pjax.min.js"></script>
-<script src="assets/js/main.js"></script>
+<script src="assets/javascript/jquery-3.2.1.min.js"></script>
+<script src="assets/javascript/anime.min.js"></script>
+<script src="assets/javascript/imagesloaded.pkgd.min.js"></script>
+<script src="assets/javascript/nprogress.js"></script>
+<script src="assets/javascript/bootstrap.bundle.min.js"></script>
+<script src="assets/javascript/swiper.min.js"></script>
+<script src="assets/javascript/jquery.shuffle.min.js"></script>
+<script src="assets/javascript/jquery.magnific-popup.min.js"></script>
+<script src="assets/javascript/validator.min.js"></script>
+<script src="assets/javascript/form-scripts.js"></script>
+<script src="assets/javascript/pjax.min.js"></script>
+<script src="assets/javascript/main.js"></script>
 </body>
 </html>
