adding adjustments to resume and to contact info.

--- a/about.html
+++ b/about.html
@@ -103,35 +103,35 @@
                                         <!-- Technical Skills -->
                                         <div class="skill-section el">
                                             <h5 class="tit-5">Technical Skills</h5>
-                                            <span>Photography</span>
+                                            <span>HTML and CSS</span>
                                             <div class="progress">
                                                 <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                                             </div>
-                                            <span>Wordpress</span>
+                                            <span>Office</span>
                                             <div class="progress">
                                               <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                           </div>
-                                          <span>Illustrator</span>
+                                          <span>Javascript</span>
                                           <div class="progress">
                                               <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                                           </div>
-                                          <span>CSS</span>
+                                          <span></span>
                                           <div class="progress">
                                               <div class="progress-bar"  role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                                           </div>  
                                       </div><!-- /.skill-section  -->
                                       <div class="services-section el">
-                                        <h5 class="tit-5">Services</h5>
+                                        <h5 class="tit-5"></h5>
                                         <div class="service-name">
                                             <h6 class="tit-6">Web Development</h6>
                                             <p>Nunc porta dui a neque hendrerit imperdiet. Cras suscipit arcu risus, nec ultrices arcu fringilla at. Praesent facilisis, erat id placerat finibus, ex leo vehicula ipsum, sed dictum dui.</p>
                                         </div>
                                         <div class="service-name">
-                                            <h6 class="tit-6">Photography</h6>
+                                            <h6 class="tit-6">Data Analyst</h6>
                                             <p>Duis vehicula nunc efficitur nibh pellentesque, ut dapibus purus posuere. Cras a placerat arcu. Nunc pretium tincidunt nisi, eget bibendum eros dignissim quis.</p>
                                         </div>
                                         <div class="service-name">
-                                            <h6 class="tit-6">UI/UX Design</h6>
+                                            <h6 class="tit-6"></h6>
                                             <p>Quisque sodales augue ac eros commodo pellentesque. Sed dapibus condimentum elementum. Sed accumsan fermentum ex vel blandit.</p>
                                         </div>
                                     </div><!-- /.services-section -->
