--- a/resume.html
+++ b/resume.html
@@ -75,31 +75,19 @@
                                         </div>
                                         <div class="col-md-5">
                                             <div class="resume-item el">
-                                                <span>2001-2003</span>
-                                                <h6 class="tit-6">School Architecture and Design</h6>
-                                                <p>Nunc porta dui a neque hendrerit imperdiet. Cras suscipit arcu risus, nec ultrices arcu fringilla at. Praesent facilisis, erat id placerat finibus, ex leo vehicula ipsum, sed dictum dui.</p>
+                                                <span>2015-2018</span>
+                                                <h6 class="tit-6">Rock Valley College</h6>
+                                                <p>I spent my first three years of college at Rock Valley College where I took general education classes and becan to decide what I wanted to do moving forward with school.</p>
                                             </div>
                                         </div>
                                         <div class="col-md-5">
                                             <div class="resume-item el">
-                                                <span>2003-2007</span>
-                                                <h6 class="tit-6">College of Computing Technology</h6>
-                                                <p>Etiam feugiat enim sit amet nisl porta laoreet. Phasellus malesuada ipsum nibh, id finibus augue semper sed.</p>
+                                                <span>2019-2020</span>
+                                                <h6 class="tit-6">University of Wisconsin</h6>
+                                                <p>Currently a student at University of Wisconsin's Online Coding Bootcamp, where I will be finishing up in May.
+                                                </p>
                                             </div>
                                         </div>
-                                        <div class="col-md-5 offset-md-2">
-                                            <div class="resume-item el">
-                                                <span>2007-2008</span>
-                                                <h6 class="tit-6">Computer Training School</h6>
-                                                <p>Nunc porta dui a neque hendrerit imperdiet. Cras suscipit arcu risus, nec ultrices arcu fringilla at. Praesent facilisis, erat id placerat finibus, ex leo vehicula ipsum, sed dictum dui.</p>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-5">
-                                            <div class="resume-item el">
-                                                <span>2008-2013</span>
-                                                <h6 class="tit-6">Institute of Technology</h6>
-                                                <p>Nunc porta dui a neque hendrerit imperdiet. Cras suscipit arcu risus, nec ultrices arcu fringilla at. Praesent facilisis, erat id placerat finibus, ex leo vehicula ipsum, sed dictum dui.</p>
-                                            </div>
                                         </div>
                                     </div> 
                                 </div>
@@ -112,30 +100,22 @@
                                         </div>
                                         <div class="col-md-5">
                                             <div class="resume-item el">
-                                                <span>2013-2014</span>
-                                                <h6 class="tit-6">Junior Web Designer</h6>
-                                                <p>Nunc porta dui a neque hendrerit imperdiet. Cras suscipit arcu risus, nec ultrices arcu fringilla at. Praesent facilisis, erat id placerat finibus, ex leo vehicula ipsum, sed dictum dui.</p>
+                                                <span>2015-2017</span>
+                                                <h6 class="tit-6"></h6>
+                                                <p>At Rock Valley College, I worked as a student worker in the Getting Started Center, which our objective was to help new students get set up with meetings with advisors, give them basic information on how college works, and give them assistance through the entire beginning process of signing up for college. I in particular often helped new students with tours, and setting them up with their meetings.</p>
                                             </div>
                                         </div>
                                         <div class="col-md-5">
                                             <div class="resume-item el">
-                                                <span>2014-2015</span>
-                                                <h6 class="tit-6">User Experience (UX) Designer</h6>
-                                                <p>Etiam feugiat enim sit amet nisl porta laoreet. Phasellus malesuada ipsum nibh, id finibus augue semper sed. Curabitur feugiat sed libero vitae mollis.</p>
-                                            </div>
+                                                <span>2015-2018</span>
+                                                <h6 class="tit-6">Game Operations Intern for the Rockford Icehogs</h6>
+                                                <p>I spent 2 full seasons (August-May) as a Game Operations intern for the Rockford Icehogs. My job was to help set up, organize, and run games outside of the hockey game itself. I would go out and find contestants, help with on ice activities, and also orginize the players that were picked to be the stars of the game. </p>
                                         </div>
                                         <div class="col-md-5 offset-md-2">
                                             <div class="resume-item el">
-                                                <span>2015-2017</span>
-                                                <h6 class="tit-6">Web Developer</h6>
-                                                <p>Nunc porta dui a neque hendrerit imperdiet. Cras suscipit arcu risus, nec ultrices arcu fringilla at. Praesent facilisis, erat id placerat finibus, ex leo vehicula ipsum, sed dictum dui.</p>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-5">
-                                            <div class="resume-item el">
-                                                <span>2017-2018</span>
-                                                <h6 class="tit-6">Freelancer</h6>
-                                                <p>Nunc porta dui a neque hendrerit imperdiet. Cras suscipit arcu risus, nec ultrices arcu fringilla at. Praesent facilisis, erat id placerat finibus, ex leo vehicula ipsum, sed dictum dui.</p>
+                                                <span>2019-2020</span>
+                                                <h6 class="tit-6">Reception-IT</h6>
+                                                <p>I currently work at Edgebrook Dermatology, where I began as a recpetionist, but due to my great understanding of computers and technology, I slowly transitiioned into doing a lot of the IT work in the office. I help with just basic computer problems, all the way to changing out parts and cleaning up the storage to run them quicker.</p>
                                             </div>
                                         </div>
                                     </div><!-- /.row  -->
