more updates to UI, added in logo's and more information about me

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/ico" href="favicon.png">
+    <link rel="icon" type="image/ico" href="assets/images/logo.svg">
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/nprogress.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
@@ -28,7 +28,7 @@
                 </div>
                 <!-- NAVIGATION  -->
                 <nav class="nav-wide">
-                    <a href="index.html"><img class="logo" src="assets/img/logo.svg" alt="logo"></a>
+                    <a href="index.html"><img class="logo" src="assets/images/logo.svg" alt="logo"></a>
                     <a href="index.html" class="index_html content-link menu-link">
                         <span class="im-1">Home</span>
                     </a>
@@ -37,9 +37,6 @@
                     </a>
                     <a href="resume.html" class="resume_html content-link menu-link">
                         <span class="im-1">Resume</span>
-                    </a>
-                    <a href="portfolio.html" class="portfolio_html content-link menu-link">
-                        <span class="im-1">Works</span>
                     </a>
                     <a href="contact.html" class="active_page contact_html content-link menu-link">
                         <span class="im-1">Contacts</span>
@@ -63,7 +60,7 @@
                                     <figure class="col-md-12">
                                         <h2 class="tit-2 el">Contacts</h2>
                                         <div class="page-number el">
-                                            <span>5</span>
+                                            <span>4</span>
                                             <div class="point-line"></div>
                                         </div>
                                     </figure>
@@ -139,7 +136,7 @@
                     <div class="col-md-12 width-footer"> 
                         <footer class="footer footer-bg-color text-center">
                             <div class="footer-content">
-                                <a href="index.html"><img class="footer-logo" src="assets/img/logo.svg" alt="logo"></a>
+                                <a href="index.html"><img class="footer-logo" src="assets/images/logo.svg" alt="logo"></a>
                                 <div class="footer-nav">
                                     <a href="index.html" class="content-link">
                                         <span>Home</span>
@@ -149,9 +146,6 @@
                                     </a>
                                     <a href="resume.html" class="content-link">
                                         <span>Resume</span>
-                                    </a>
-                                    <a href="portfolio.html" class="content-link">
-                                        <span>Works</span>
                                     </a>
                                     <a href="contact.html" class="content-link">
                                         <span>Contacts</span>
