--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/ico" href="favicon.png">
+    <link rel="icon" type="image/ico" href="assets/images/logo.svg">
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/nprogress.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
@@ -38,7 +38,7 @@
                 </div>
                 <!-- NAVIGATION  -->
                 <nav class="nav-wide">
-                    <a href="index.html"><img class="logo" src="assets/img/logo.svg" alt="logo"></a>
+                    <a href="index.html"><img class="logo" src="assets/images/logo.svg" alt="logo"></a>
                     <a href="index.html" class="active_page index_html content-link menu-link">
                         <span class="im-1">Home</span>
                     </a>
@@ -47,9 +47,6 @@
                     </a>
                     <a href="resume.html" class="resume_html content-link menu-link">
                         <span class="im-1">Resume</span>
-                    </a>
-                    <a href="portfolio.html" class="portfolio_html content-link menu-link">
-                        <span class="im-1">Works</span>
                     </a>
                     <a href="contact.html" class="contact_html content-link menu-link">
                         <span class="im-1">Contacts</span>
@@ -143,60 +140,9 @@
                                 <div class="swiper-button-prev"><span></span></div>
                             </div>
                             <!-- Add Pagination -->
-                            <div class="swiper-pagination el"></div>
-                            <!-- HOME SERVICES -->
-                            <div class="home-services el">
-                                <h5 class="home-title-section tit-5">My services</h5>
-                                <div class="row home-services-wrap">
-                                    <div class="col-md-4">
-                                        <div class="home-item-services">
-                                          <span>01</span>
-                                          <h6 class="tit-6">Web Development</h6>
-                                          <p>Nunc porta dui a neque hendrerit imperdiet. Cras suscipit arcu risus, nec ultrices arcu fringilla at. Praesent facilisis, erat id placerat finibus, ex leo vehicula ipsum, sed dictum dui.</p>
-                                      </div>
-                                  </div>
-                                  <div class="col-md-4">
-                                    <div class="home-item-services">
-                                      <span>02</span>
-                                      <h6 class="tit-6">Photography</h6>
-                                      <p>Duis vehicula nunc efficitur nibh pellentesque, ut dapibus purus posuere. Cras a placerat arcu. Nunc pretium tincidunt nisi, eget bibendum eros dignissim quis.</p>
-                                  </div>    
-                              </div>
-                              <div class="col-md-4">
-                                <div class="home-item-services">
-                                  <span>03</span>
-                                  <h6 class="tit-6">UI/UX Design</h6>
-                                  <p>Quisque sodales augue ac eros commodo pellentesque. Sed dapibus condimentum elementum. Sed accumsan fermentum ex vel blandit.</p>
-                              </div>    
                           </div>
                       </div>
                   </div>
-                  <!-- /.home-services -->
-                  <!-- HOME CLIENTS -->
-                  <div class="home-services el">
-                    <h5 class="home-title-section tit-5">Clients</h5>
-                    <div class="row home-client-wrap">
-                        <div class="col-6 col-sm-4 col-md-3 home-item-clients-1">
-                            <img class="img-fluid" src="assets/img/clients/company.png" alt="img">
-                        </div>
-                        <div class="col-6 col-sm-4 col-md-3 home-item-clients-2">
-                            <img class="img-fluid" src="assets/img/clients/company-2.png" alt="img">  
-                        </div>
-                        <div class="col-6 col-sm-4 col-md-3 home-item-clients-3">
-                            <img class="img-fluid" src="assets/img/clients/company-3.png" alt="img">   
-                        </div>
-                        <div class="col-6 col-sm-4 col-md-3 home-item-clients-4">
-                            <img class="img-fluid" src="assets/img/clients/company-4.png" alt="img"> 
-                        </div>
-                        <div class="col-6 col-sm-4 col-md-3 offset-md-3 home-item-clients-5">
-                            <img class="img-fluid" src="assets/img/clients/company-4.png" alt="img">   
-                        </div>
-                        <div class="col-6 col-sm-4 col-md-3 home-item-clients-6">
-                            <img class="img-fluid" src="assets/img/clients/company.png" alt="img">  
-                        </div>
-                    </div>
-                </div>
-                <!-- /.home-services -->
             </div>
         </div>
         <!-- /.row -->
@@ -219,7 +165,7 @@
                     <div class="col-md-12 width-footer"> 
                        <footer class="footer footer-bg-color text-center">
                         <div class="footer-content">
-                            <a href="index.html"><img class="footer-logo" src="assets/img/logo.svg" alt="logo"></a>
+                            <a href="index.html"><img class="footer-logo" src="assets/images/logo.svg" alt="logo"></a>
                             <div class="footer-nav">
                                 <a href="index.html" class="content-link">
                                     <span>Home</span>
@@ -229,9 +175,6 @@
                                 </a>
                                 <a href="resume.html" class="content-link">
                                     <span>Resume</span>
-                                </a>
-                                <a href="portfolio.html" class="content-link">
-                                    <span>Works</span>
                                 </a>
                                 <a href="contact.html" class="content-link">
                                     <span>Contacts</span>
