--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/ico" href="favicon.png">
+    <link rel="icon" type="image/ico" href="assets/images/logo.svg">
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/nprogress.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
@@ -37,9 +37,6 @@
                     </a>
                     <a href="resume.html" class="resume_html content-link menu-link">
                         <span class="im-1">Resume</span>
-                    </a>
-                    <a href="portfolio.html" class="portfolio_html content-link menu-link">
-                        <span class="im-1">Works</span>
                     </a>
                     <a href="contact.html" class="contact_html content-link menu-link">
                         <span class="im-1">Contacts</span>
@@ -116,8 +113,6 @@
                                               <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                                           </div>
                                           <span></span>
-                                          <div class="progress">
-                                              <div class="progress-bar"  role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                                           </div>  
                                       </div><!-- /.skill-section  -->
                                       <div class="services-section el">
@@ -129,10 +124,6 @@
                                         <div class="service-name">
                                             <h6 class="tit-6">Data Analyst</h6>
                                             <p>Duis vehicula nunc efficitur nibh pellentesque, ut dapibus purus posuere. Cras a placerat arcu. Nunc pretium tincidunt nisi, eget bibendum eros dignissim quis.</p>
-                                        </div>
-                                        <div class="service-name">
-                                            <h6 class="tit-6"></h6>
-                                            <p>Quisque sodales augue ac eros commodo pellentesque. Sed dapibus condimentum elementum. Sed accumsan fermentum ex vel blandit.</p>
                                         </div>
                                     </div><!-- /.services-section -->
                                 </div><!-- /.col-md-7 -->
@@ -165,9 +156,6 @@
                                     </a>
                                     <a href="resume.html" class="content-link">
                                         <span>Resume</span>
-                                    </a>
-                                    <a href="portfolio.html" class="content-link">
-                                        <span>Works</span>
                                     </a>
                                     <a href="contact.html" class="content-link">
                                         <span>Contacts</span>
