--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/ico" href="favicon.png">
+    <link rel="icon" type="image/ico" href="assets/images/logo.svg">
     <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/nprogress.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
@@ -28,7 +28,7 @@
                 </div>
                 <!-- NAVIGATION  -->
                 <nav class="nav-wide">
-                    <a href="index.html"><img class="logo" src="assets/img/logo.svg" alt="logo"></a>
+                    <a href="index.html"><img class="logo" src="assets/images/logo.svg" alt="logo"></a>
                     <a href="index.html" class="index_html content-link menu-link">
                         <span class="im-1">Home</span>
                     </a>
@@ -37,9 +37,6 @@
                     </a>
                     <a href="resume.html" class="active_page resume_html content-link menu-link">
                         <span class="im-1">Resume</span>
-                    </a>
-                    <a href="portfolio.html" class="portfolio_html content-link menu-link">
-                        <span class="im-1">Works</span>
                     </a>
                     <a href="contact.html" class="contact_html content-link menu-link">
                         <span class="im-1">Contacts</span>
@@ -111,7 +108,7 @@
                                                 <h6 class="tit-6">Game Operations Intern for the Rockford Icehogs</h6>
                                                 <p>I spent 2 full seasons (August-May) as a Game Operations intern for the Rockford Icehogs. My job was to help set up, organize, and run games outside of the hockey game itself. I would go out and find contestants, help with on ice activities, and also orginize the players that were picked to be the stars of the game. </p>
                                         </div>
-                                        <div class="col-md-5 offset-md-2">
+                                        <div class="col-md-5">
                                             <div class="resume-item el">
                                                 <span>2019-2020</span>
                                                 <h6 class="tit-6">Reception-IT</h6>
@@ -137,7 +134,7 @@
                         <div class="col-md-12 width-footer"> 
                            <footer class="footer footer-bg-color text-center">
                             <div class="footer-content">
-                                <a href="index.html"><img class="footer-logo" src="assets/img/logo.svg" alt="logo"></a>
+                                <a href="index.html"><img class="footer-logo" src="assets/images/logo.svg" alt="logo"></a>
                                 <div class="footer-nav">
                                     <a href="index.html" class="content-link">
                                         <span>Home</span>
@@ -147,9 +144,6 @@
                                     </a>
                                     <a href="resume.html" class="content-link">
                                         <span>Resume</span>
-                                    </a>
-                                    <a href="portfolio.html" class="content-link">
-                                        <span>Works</span>
                                     </a>
                                     <a href="contact.html" class="content-link">
                                         <span>Contacts</span>
